# telegram-summarizer-bot

./: .gitignore  LICENSE  README.md  pyproject.toml  template.yaml
src/: app.py  requirements.txt  settings.py
