[project]
name = "telegram-summarizer-bot"
version = "0.1.0"
description = "Telegram chat summarization bot using AWS Lambda and Gemini API"
authors = [
    {name = "PSW",email = "qkrtkddnr0118@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"